--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+
+[env]
+upload_port = /dev/ttyACM0
+debug_port = /dev/ttyACM0
+monitor_flags = --echo
+
 [env:megaatmega2560]
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+lib_deps = mike-matera/ArduinoSTL@^1.1.0
