--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:megaatmega2560]
-platform = atmelavr
-board = megaatmega2560
+[env:nodemcu-32s]
+platform = espressif32
+board = nodemcu-32s
 framework = arduino
+upload_port = COM3
+monitor_speed = 115200
+
+; If we'll need more space, we'll exchange space into OTA updates.
+; board_build.partitions = no_ota.csv
+
+
+
