--- a/platformio.ini
+++ b/platformio.ini
@@ -8,15 +8,23 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = Espressif32
+
 [env:nodemcu-32s]
 platform = espressif32
 board = nodemcu-32s
-framework = arduino
+board_build.f_cpu = 240000000L
 upload_port = COM3
 monitor_speed = 115200
+framework = arduino
 
-; If we'll need more space, we'll exchange space into OTA updates.
-; board_build.partitions = no_ota.csv
-
-
-
+[env:Espressif32]
+platform = espressif32
+board = esp-wrover-kit
+board_build.f_cpu = 240000000L
+framework = arduino
+monitor_speed = 115200
+board_build.mcu = esp32
+upload_port = COM6
+board_build.partitions = default_8MB.csv
