Blinker Tasks and Interrupt routines

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,9 @@ board_build.f_cpu = 240000000L
 upload_port = COM3
 monitor_speed = 115200
 framework = arduino
+lib_deps = 
+	xreef/PCF8574 library@^2.2.1
+	werecatf/PCF8574_ESP@^1.0.10
 
 [env:Espressif32]
 platform = espressif32
@@ -28,3 +31,6 @@ monitor_speed = 115200
 board_build.mcu = esp32
 upload_port = COM6
 board_build.partitions = default_8MB.csv
+lib_deps = 
+	xreef/PCF8574 library@^2.2.1
+	werecatf/PCF8574_ESP@^1.0.10
