--- a/platformio.ini
+++ b/platformio.ini
@@ -11,15 +11,27 @@
 [platformio]
 default_envs = Espressif32
 
+[common_env_data]
+build_flags =
+    -D VERSION=1.2.3
+    -D DEBUG=1
+lib_deps =
+	xreef/PCF8574 library@^2.2.1
+	bblanchon/ArduinoJson @ ^6.17.3
+
+
 [env:nodemcu-32s]
 platform = espressif32
+build_flags =  
+	${common_env_data.build_flags}
+
 board = nodemcu-32s
 board_build.f_cpu = 240000000L
 upload_port = COM3
 monitor_speed = 115200
 framework = arduino
-lib_deps = 
-	xreef/PCF8574 library@^2.2.1
+lib_deps = ${common_env_data.lib_deps}
+	
 
 [env:Espressif32]
 platform = espressif32
@@ -30,6 +42,4 @@ monitor_speed = 115200
 board_build.mcu = esp32
 upload_port = COM6
 board_build.partitions = default_8MB.csv
-lib_deps = 
-	xreef/PCF8574 library@^2.2.1
-	werecatf/PCF8574_ESP@^1.0.10
+lib_deps = ${common_env_data.lib_deps}
