--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ build_flags =
 lib_deps =
 	xreef/PCF8574 library@^2.2.1
 	bblanchon/ArduinoJson @ ^6.17.3
+	lorol/LittleFS_esp32 @ ^1.0.6
 
 
 [env:nodemcu-32s]
