--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,9 @@ lib_deps =
 	xreef/PCF8574 library@^2.2.1
 	bblanchon/ArduinoJson @ ^6.17.3
 	lorol/LittleFS_esp32 @ ^1.0.6
+	adafruit/Adafruit PWM Servo Driver Library @ ^2.4.0
+	adafruit/Adafruit FONA Library @ ^1.3.8
+	plerup/EspSoftwareSerial @ ^6.12.2
 
 
 [env:nodemcu-32s]
