--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ build_flags =
     -D VERSION=1.2.3
     -D DEBUG=1
 lib_deps =
-	xreef/PCF8574 library@^2.2.1
+	werecatf/PCF8574_ESP @ ^1.0.10
 	bblanchon/ArduinoJson @ ^6.17.3
 	lorol/LittleFS_esp32 @ ^1.0.6
 	adafruit/Adafruit PWM Servo Driver Library @ ^2.4.0
